2007-01-25  Akim Demaille  <demaille@gostai.com>

	Use passert
	* src/parser/bison/bison.mk: Pass -s to flex so that it does not
	generate a default rule using its own ECHO which does not have the
	same signature as ours.
	* src/uexpression.cc: Use passert for fun.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Factoring
	* src/uvariablename.hh, src/uvariablename.cc (update_array_mangling):
	New.
	Use it.
re

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Simplifications
	* src/parser/bison/ugrammar.y: Use ? :.
	* src/uvariablename.cc (UVariableName::buildFullname): Shorten
	scopes.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Fix "bin" parsing
	* src/parser/bison/ugrammar.y: The alias is "bin", not "BIN".

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Merge 697:736 from the branch "1.0".
	2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #73 (illegal void operations)
	* src/uexpression.cc: done.

	2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	remove spaces.
	* src/uvariable.hh: done.

	2007-01-24  Jean-Christophe Baillie  <baillie@gostai.com>

	Since the major event mechanism rewriting in r265, test lazzy
	evaluation had been broken on purpose, because we wanted the following
	code to ping twice:

	(1):

	at (a || b) ping;
	emit a & emit b;

	So we had to eval the right side of || even if the left side was
	already true (same thing with &&).
	This led to a series of serious problems where programmers commonly
	took for granted that things like that should work:

	if (!isdef(x) || x...) // trigger a runtime error on x when unknown!

	It also impacted the autogenerated code of 'new', which made the
	command fail in some cases.

	So I have reestablished the lazzy test evaluation for the moment.
	There is a serious question on how to mix events and expressions eval in
	tests and this will be tackled later. Bearclaw suggests that the
	simple | bitwise operator could be used to have the same effect as ||